roles/installer/templates/kubegems/controller/gems-controller-manager-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: gems-controller-manager
    control-plane: controller-manager
  name: gems-controller-manager-metrics-service
  namespace: gemcloud-system
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    app.kubernetes.io/name: gems-controller-manager
    control-plane: controller-manager
