roles/installer/templates/kubegems/controller/gems-validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: gemcloud-system/gems-controller-cert
  labels:
    app.kubernetes.io/name: gems-controller-manager
    control-plane: controller-manager
  name: gems-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: gems-webhook-service
      namespace: gemcloud-system
      path: /validate
  failurePolicy: Fail
  name: validate.tenant.dev
  rules:
  - apiGroups:
    - kubegems.io
    apiVersions:
    - v1beta1
    operations:
    - UPDATE
    resources:
    - tenants
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: gems-webhook-service
      namespace: gemcloud-system
      path: /validate
  failurePolicy: Fail
  name: validate.tenantresourcequota.dev
  rules:
  - apiGroups:
    - kubegems.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - tenantresourcequotas
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: gems-webhook-service
      namespace: gemcloud-system
      path: /validate
  failurePolicy: Fail
  name: validate.tenantnetworkpolicy.dev
  rules:
  - apiGroups:
    - kubegems.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - tenantnetworkpolicies
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: gems-webhook-service
      namespace: gemcloud-system
      path: /validate
  failurePolicy: Fail
  name: validate.tenantgateway.dev
  rules:
  - apiGroups:
    - kubegems.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - tenantgateways
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: gems-webhook-service
      namespace: gemcloud-system
      path: /validate
  failurePolicy: Fail
  name: validate.environment.dev
  rules:
  - apiGroups:
    - kubegems.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - environments
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: gems-webhook-service
      namespace: gemcloud-system
      path: /validate
  failurePolicy: Fail
  name: valiate.namespace.dev
  rules:
  - apiGroups:
    - ''
    apiVersions:
    - '*'
    operations:
    - DELETE
    resources:
    - namespaces
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: gems-webhook-service
      namespace: gemcloud-system
      path: /validate
  failurePolicy: Fail
  name: validate.istiogateway.dev
  rules:
  - apiGroups:
    - networking.istio.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - gateways
  sideEffects: None
